Fixed Bug with braces in interpolations and added decorators

--- a/test.jade
+++ b/test.jade
@@ -1,1 +1,6 @@
-- var  a = {a: 12, b: "str#[br aaa]inf"}();
+ul
+    li.first Page 1
+    li.middle Page 2
+    li.middle Page 3
+    @onClick(a += 1, true)
+    li.last Page 4
