Remove console.logs

--- a/test.jade
+++ b/test.jade
@@ -1,6 +1,5 @@
 ul
     li.first Page 1
     li.middle Page 2
-    li.middle Page 3
-    @onClick(a += 1, true)
-    li.last Page 4
+    li.middle= page1
+    li.last: a Page 4
