--- a/test2.jade
+++ b/test2.jade
@@ -1,1 +1,15 @@
-| Hello world #{test + a}
+div(test!="hello, world", style!={color: color, border: '1px solid red'})
+    div#qq.test
+        ul
+            if c === 1
+                li Pgae 1
+            else if c === 2
+                li Page 2
+            else 
+                li Unknown
+            
+            li: a Page !{'18' + a()} hello world
+div
+    for i, k in test
+        span: a !{k}
+
